[package]
name = "crypto-mining-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.8.4"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
